@@ -4,23 +4,37 @@ use WP_Query;
 
 defined( 'ABSPATH' ) or die( 'No script kiddies please!' );
 
-class PWB_AZ_Listing_Shortcode{
+class PWB_AZ_Listing_Shortcode {
 
   public static function shortcode( $atts ) {
 
-    $atts = shortcode_atts( array(
-      'only_parents' => false,
-    ), $atts, 'pwb-az-listing' );
+    $grouped_brands = get_transient('pwb_az_listing_cache');
 
-    $only_parents = filter_var( $atts['only_parents'], FILTER_VALIDATE_BOOLEAN );
+    if ( ! $grouped_brands ) {
 
-    $brands         = \Perfect_Woocommerce_Brands\Perfect_Woocommerce_Brands::get_brands( true, 'name', 'ASC', false, false, $only_parents );
-    $grouped_brands = array();
+      $atts = shortcode_atts( array(
+        'only_parents' => false,
+      ), $atts, 'pwb-az-listing' );
 
-    foreach( $brands as $brand ){
-      $letter = mb_substr( htmlspecialchars_decode( $brand->name ), 0, 1 );
-      $letter = strtolower( $letter );
-      $grouped_brands[$letter][] = [ 'brand_term' => $brand, 'has_products' => self::has_products( $brand->term_id ) ];
+      $only_parents = filter_var( $atts['only_parents'], FILTER_VALIDATE_BOOLEAN );
+
+      $brands         = \Perfect_Woocommerce_Brands\Perfect_Woocommerce_Brands::get_brands( true, 'name', 'ASC', false, false, $only_parents );
+      $grouped_brands = array();
+
+      foreach ( $brands as $brand ) {
+
+        if ( self::has_products( $brand->term_id ) ) {
+
+          $letter = mb_substr( htmlspecialchars_decode( $brand->name ), 0, 1 );
+          $letter = strtolower( $letter );
+          $grouped_brands[$letter][] = [ 'brand_term' => $brand ];
+
+        }
+
+      }
+
+      set_transient( 'pwb_az_listing_cache', $grouped_brands, 43200 );//12 hours
+
     }
 
     return \Perfect_Woocommerce_Brands\Perfect_Woocommerce_Brands::render_template(
@@ -36,8 +50,8 @@ class PWB_AZ_Listing_Shortcode{
 
     $args = array(
       'posts_per_page' => -1,
-      'post_type' => 'product',
-      'tax_query' => array(
+      'post_type'      => 'product',
+      'tax_query'      => array(
         array(
           'taxonomy' => 'pwb-brand',
           'field'    => 'term_id',
