@@ -1,7 +1,7 @@
 <?php
 /**
  * The template for displaying the a-z Listing
- * @version 1.0.0
+ * @version 1.0.1
  */
 
  defined( 'ABSPATH' ) or die( 'No script kiddies please!' );
@@ -33,15 +33,11 @@
 
             <?php foreach( $brand_group as $brand ): ?>
 
-              <?php if( !empty( $brand['has_products'] ) ): ?>
-
-                <div class="pwb-az-listing-col">
-                  <a href="<?php echo get_term_link($brand['brand_term']->term_id);?>">
-                    <?php echo $brand['brand_term']->name;?>
-                  </a>
-                </div>
-
-              <?php endif;?>
+              <div class="pwb-az-listing-col">
+                <a href="<?php echo get_term_link($brand['brand_term']->term_id);?>">
+                  <?php echo $brand['brand_term']->name;?>
+                </a>
+              </div>
 
             <?php endforeach; ?>
 
